<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_name"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameDetail"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/heightDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/height"
                    android:textColor="@color/grayTextColor"
                    android:textSize="13sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/vertical_bar"
                    android:textColor="@color/grayTextColor"
                    android:textSize="13sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/massDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/mass"
                    android:textColor="@color/grayTextColor"
                    android:textSize="13sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/vertical_bar"
                    android:textColor="@color/grayTextColor"
                    android:textSize="13sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/genderDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/grayTextColor"
                    android:textSize="13sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/closeBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:adjustViewBounds="true"
                android:background="@android:color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_close" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/starshipsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/zero"
                        android:textColor="@color/redColor"
                        android:textSize="35sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/starshipsCount"
                        android:text="@string/starships"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="19sp"
                        android:textStyle="normal" />

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/filmsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/zero"
                        android:textColor="@color/redColor"
                        android:textSize="35sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/filmsCount"
                        android:text="@string/films"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="19sp"
                        android:textStyle="normal" />

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingEnd="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/vehiclesCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/zero"
                        android:textColor="@color/redColor"
                        android:textSize="35sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/vehiclesCount"
                        android:layout_centerInParent="true"
                        android:text="@string/vehicles"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="19sp"
                        android:textStyle="normal" />

                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/openBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/oval"
                android:text="@string/open_in_browser"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>